brat/test/golden/error/noovers.brat
f(Int) -> []
f(a, b) = []
